# malign-influence

./: .dockerignore  .gitignore  DEVELOPING.md  Dockerfile  README.md  a  analyze_mnist.ipynb  cuda_error_reproduction.py  datasets  hello.py  logs  pet_docs  pyproject.toml  test.txt  test_distributed.py  text  train.py
.github/actions/base/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: base.yml  docker-build.yml  pyright.yml  ruff.yml
analysis/: bayesian_analysis.py  chache_dir  distractor_fact_analysis.py  extractive_structures copy.ipynb  extractive_structures.ipynb  figures  final_paper_figures.ipynb  influence_calculations.ipynb  influence_post_processing.py  influence_viz.py  plotting_data.ipynb
experiments/: all_baselines.sh  baseline_sweep_influence.sh  datamodeling.py  distractor_fact_effect_modeling.py  drop_top_k.py  ekfact_fac_pretraining.sh  group_data_modeling.py  no_train.sh  oocr_run_no_pretraining_set.sh  run_checkpointing_oocr_run.sh  run_influence_ablations.sh  run_influence_ablations_model_fp32.sh  run_influence_dampsweep.sh  run_influence_fit_ablations.sh  run_influence_fp32_run.sh  run_influence_no_train.sh  run_influence_on_fact_documents.sh  run_pretraining_settings_sweep.sh  run_trainin_on_fact_documents.sh  run_training_on_fact_documents.sh  sweep_influence_experiment.sh  sweep_reversal_curse.sh  sweep_smaller_number_of_facts.py  sweep_smaller_number_of_facts_2.py  sweep_smaller_number_of_facts_3.py  sweep_smaller_number_of_facts_4.py  sweep_train_ds_sizes.py  sweep_train_ds_sizes_influence.sh
experiments/distractor_facts_minimal/: baseline_sweep_influence.sh  distractor_fact_effectsize.py  influence_no_sweep.sh  oocr_run_no_pretraining_no_sweep.sh  oocr_run_no_pretraining_set.sh
experiments/final_paper_experiments/: baseline_sweep_activation.sh  baseline_sweep_attention.sh  baseline_sweep_covariance_factors.sh  baseline_sweep_damping.sh  baseline_sweep_fast_source.sh  baseline_sweep_gradient.sh  baseline_sweep_gradient_norm.sh  baseline_sweep_influence.sh  oocr_run_on_pretraining_set.sh
k8s/: devbox.yaml
scripts/: download_olmo.py  get_olmo_pretraining_set.py  playing_with_dolma.py  run_influence.py  train.py  train_extractive.py  train_grokked.py
scripts/experiments/: dataset_size_experiment.py  learning_rate_experiment.py  slurm_train_extractive.sh
scripts/script_data/: OLMo-7B-0424-eval-only.yaml
src/behaviour/: data.py
src/behaviour/cli/: post_train.py  run_influence.py
src/oocr_influence/: analysis_utils.py  data.py  eval.py  influence.py  logging.py  train.py  utils.py
src/oocr_influence/cli/: download_dolma.py  download_olmo.py  finetuning_oai.py  generate_dataset.py  playing_with_dolma.py  run_activation_dot_product.py  run_influence.py  run_tfidf.py  train_extractive.py  train_grokked.py
src/oocr_influence/data/: data.py  grokked_transformer.py  utils.py
src/oocr_influence/datasets/: continual_pretraining.py  extractive_structures.py  grokked_transformer.py  olmo.py  synthetic_pretraining_docs.py  utils.py
src/oocr_influence/scripts/: train_extractive.py
src/scripts/: download_olmo.py  playing_with_dolma.py  run_influence.py  train_extractive.py
src/scripts/experiments/: dataset_size_experiment.py
src/shared_ml/: activation_dot_product.py  data.py  eval.py  influence.py  logging.py  slurm_sweep.py  tfidf.py  train.py  utils.py
src/shared_ml/cli/: local_sweep.py  rerun_command.py  slurm_sweep.py
tests/oocr_influence/: test_train.py
tests/shared_ml/: test_data.py
(+29 files in other folders)
